get rid of UpdateJobPriorityBody
