# modules/rest-api/openapi/openapi.yaml
@@ -183,7 +183,9 @@ paths:
         "200":
           description: Successful cancellation of the job.
           content:
-            application/json: {}
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OperationResult'
         "404":
           description: Compute job not found.
           content:
@@ -207,17 +209,19 @@ paths:
           description: The unique identifier of the compute job.
           format: uuid
       requestBody:
-        description: The new priority data for the job.
         content:
-          application/json:
+          text/plain:
             schema:
-              $ref: '#/components/schemas/UpdateJobPriorityBody'
+              type: integer
+              format: int32
         required: true
       responses:
         "200":
           description: Successful update of the job priority.
           content:
-            application/json: {}
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OperationResult'
         "404":
           description: Compute job not found.
           content:
@@ -1059,6 +1063,15 @@ components:
           - $ref: '#/components/schemas/State'
           - description: Node status.
       description: Node state.
+    OperationResult:
+      required:
+      - success
+      type: object
+      properties:
+        success:
+          type: boolean
+          description: Operation result.
+      description: Operation result.
     Problem:
       type: object
       properties:
@@ -1129,16 +1142,6 @@ components:
           - $ref: '#/components/schemas/DeploymentStatus'
           - description: Unit status.
       description: Unit version and status.
-    UpdateJobPriorityBody:
-      required:
-      - priority
-      type: object
-      properties:
-        priority:
-          type: integer
-          description: Priority.
-          format: int32
-      description: DTO of update job priority request body.
     deployMode:
       type: string
       description: Initial set of nodes to deploy.
